Address deprecated GC options
Simply GC options and remove deprecated combinations. Only need to specify the main compiler option (G1 or ConcMarkSweep) now. Fixes #3